src/tests/cases/snapshots/jett__tests__cases__ui__delete_folder_small_window-7.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[6]"
---
        8.0K | /tmp/jet _tests/delete_folder_smal _window   
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                           file2                            
                                                            
                                                            
                         4.0K (50%)                         
                                                            
│                                                          │
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
├──────────────────────────────────────────────────────────┤
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
│                                                          │
                                                            
                           file3                            
                                                            
                                                            
                         4.0K (50%)
