src/tests/cases/snapshots/jett__tests__cases__ui__delete_folder_small_window_no_confirmation-4.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[3]"
---
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                           file3                            
                                                            
                         4.0K (33%)                         
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
                                                            
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ███████████████subfolder1/ (+1 descendants)███████████████ 
 ████████████████████████4.0K (33%)████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 █1 items; % of folder█████████████████████████████████████ 
 █#1 file1         [################################] 100%█ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
 ██████████████████████████████████████████████████████████ 
                                                            
 SELECTED: subfolder1 (4.0K, 1 files)                       
                                                            

