src/tests/cases/snapshots/jett__tests__cases__ui__delete_folder_small_window_no_confirmation.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[0]"
---
 12.0K | /tmp/jett_tests/delete_[...]_window_no_confirmation
┌──────────────────────────────────────────────────────────┐
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                          file2                           │
│                                                          │
│                                                          │
│                        4.0K (33%)                        │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
├──────────────────────────────────────────────────────────┤
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                          file3                           │
│                                                          │
│                        4.0K (33%)                        │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
├──────────────────────────────────────────────────────────┤
│                                                          │
│                                                          │
│                                                          │
│               subfolder1/ (+1 descendants)               │
│                        4.0K (33%)                        │
│                                                          │
│                                                          │
│                                                          │
│ 1 items; % of folder                                     │
│ #1 file1         [################################] 100% │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
                                                            
 ←↓↑→: navigate, ⌫: del           DRY-RUN OFF + CONFIRM OFF
